# mongodbhackathon

./: .gitignore  ReadMe.md  app.py  pyproject.toml  user.py  vectorsearch.py
src/: embeddings.py  llamaindex_html_reader.py  lllamaindex_doc_reader_withembeddings.py
