[project]
name = "mongodbhackathon"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "streamlit>=1.33.0",
    "pymongo>=4.6.3",
    "llama_index>=0.10.30",
    "llama_index.embeddings.openai>=0.1.8",
    "llama_index.vector_stores.mongodb>=0.1.4",
    "llama_index.llms.mistralai>=0.1.11",
    "transformers>=4.40.0",
    "fireworks>=2.0.3",
    "fireworks-ai>=0.14.0",
    "langchain-fireworks>=0.1.2",
    "llama-index-llms-openai>=0.1.16",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mongodbhackathon"]
